--- a/lesson01/005.html
+++ b/lesson01/005.html
@@ -1,4 +1,4 @@
-<!-- Page 121 ~ 123 -->
+<!-- Page 130 ~ 131 -->
 <!DOCTYPE html>
 <html>
   <head>
@@ -8,7 +8,7 @@
     <h1>Where do you want to go?</h1>
     <h2>Travel Destinations</h2>
     <p>Plan your next adventures</p>
-    <ul id='destinations'>
+    <ul id="destinations">
       <li>Rome</li>
       <li>Paris</li>
       <li class='promo'>Rio</li>
