--- a/lesson01/004_answer_01.html
+++ b/lesson01/004_answer_01.html
@@ -1,8 +1,14 @@
-<!-- Page 121 ~ 123 -->
+<!-- Page 125 -->
 <!DOCTYPE html>
 <html>
   <head>
     <title>jQuery Adventures</title>
+    <script type="text/javascript" src="./jquery-3.1.1.min.js"></script>
+    <script type="text/javascript">
+      $(document).ready(function() {
+        $("#destinations li").text("Seoul");
+      });
+    </script>
   </head>
   <body>
     <h1>Where do you want to go?</h1>
@@ -10,7 +16,9 @@
     <p>Plan your next adventures</p>
     <ul id='destinations'>
       <li>Rome</li>
-      <li>Paris</li>
+      <ul id='france'>
+        <li>Paris</li>
+      </ul>
       <li class='promo'>Rio</li>
     </ul>
   </body>
