--- a/lesson04/001_answer_05.html
+++ b/lesson04/001_answer_05.html
@@ -9,6 +9,28 @@
         $("button").on("click", function() {
           $(this).closest(".confirmation").find(".ticket").slideDown();
         });
+
+        $(".viewTicket").on("click", function() {
+          $.ajax("http://localhost:8080/server/confirmation_lazyload.jsp", {
+            success: function(response) {
+              $(".ticket").children("span").last().after(response).slideDown();
+              $(".viewTicket").remove();
+            },
+            data: {
+              "confNum": 1234
+            },
+            error: function(request, errorType, errorMessage) {
+              alert("Error: " + errorType + " with message : " + errorMessage);
+            },
+            timeout: 3000,
+            beforeSend: function () {
+              $(".confirmation").addClass("is-loading");
+            },
+            complete: function () {
+              $(".confirmation").removeClass("is-loading");
+            }
+          });
+        });
       });
     </script>
   </head>
